DigicielFull/force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>Used for internal requesting service request, i.e. Field Survey, Installation etc.</description>
    <label>Service Request</label>
    <nameField>
        <label>Service Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>