DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Activated_On__c.field-meta.xml
<CustomField>
    <fullName>Activated_On__c</fullName>
    <inlineHelpText>This is the date the account has been activated and billing should commence</inlineHelpText>
    <label>Activated On</label>
    <type>Date</type>
</CustomField>