DigicielFull/force-app/main/default/objects/Service_Request__c/fields/APSCreationDate__c.field-meta.xml
<CustomField>
    <fullName>APSCreationDate__c</fullName>
    <label>Création APS</label>
    <type>Date</type>
</CustomField>