DigicielFull/force-app/main/default/objects/Service_Request__c/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <description>Account ID</description>
    <label>BAN</label>
    <length>55</length>
    <type>Text</type>
</CustomField>