DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Bundle_Package__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Package__c</fullName>
    <label>Bundle Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>