DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Circuit_Type__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Type__c</fullName>
    <label>Circuit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P2P</fullName>
            </value>
            <value>
                <fullName>Fibre</fullName>
            </value>
            <value>
                <fullName>WIMAX</fullName>
            </value>
            <value>
                <fullName>Cabling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>