DigicielFull/force-app/main/default/objects/Service_Request__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>1</formula>
    <label>zDeprecated City</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>