DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ClientNumber__c.field-meta.xml
<CustomField>
    <fullName>ClientNumber__c</fullName>
    <label>Client Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>