DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Used for field surveys completed date</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>