DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Contact_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alternative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact (Alternative)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests (Contact (Alternative))</relationshipLabel>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>