DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <formula>Contact_Name__r.Phone</formula>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>