DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>