DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ContractCompletionTime__c.field-meta.xml
<CustomField>
    <fullName>ContractCompletionTime__c</fullName>
    <formula>Completed_Date__c -  DATEVALUE(Contract__r.CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractCompletionTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>