DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT(Opportunity__r.Country__c)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>