DigicielFull/force-app/main/default/objects/Service_Request__c/fields/CustomerHoldDays__c.field-meta.xml
<CustomField>
    <fullName>CustomerHoldDays__c</fullName>
    <label>Customer hold days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>