DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Date_Returned_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned_to_Sales__c</fullName>
    <label>Date Returned to Sales</label>
    <type>Date</type>
</CustomField>