DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Date_Returned_to_Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned_to_Service_Delivery__c</fullName>
    <description>captures date returned to service delivery</description>
    <label>Date Returned to Service Delivery</label>
    <type>Date</type>
</CustomField>