DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Date_SR_Status_Removed_from_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Date_SR_Status_Removed_from_Contractor__c</fullName>
    <description>tracks the date the status is changed from &quot;Sent to Contractor&quot;</description>
    <label>Date SR Status Removed from Contractor</label>
    <type>Date</type>
</CustomField>