DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Date_SR_Status_Updated_to_Customer_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_SR_Status_Updated_to_Customer_Hold__c</fullName>
    <description>Date the status was changed to customer hold</description>
    <label>Date SR Status Updated to Customer Hold</label>
    <type>Date</type>
</CustomField>