DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Date_SRStatus_Removed_from_Customer_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_SRStatus_Removed_from_Customer_Hold__c</fullName>
    <description>Date service request removed from customer hold</description>
    <label>Date SRStatus Removed from Customer Hold</label>
    <type>Date</type>
</CustomField>