DigicielFull/force-app/main/default/objects/Service_Request__c/fields/DateForecast__c.field-meta.xml
<CustomField>
    <fullName>DateForecast__c</fullName>
    <label>Date Forecast</label>
    <type>Date</type>
</CustomField>