DigicielFull/force-app/main/default/objects/Service_Request__c/fields/DBSNumber__c.field-meta.xml
<CustomField>
    <fullName>DBSNumber__c</fullName>
    <label>N° DBS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>