DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Delay__c.field-meta.xml
<CustomField>
    <fullName>Delay__c</fullName>
    <defaultValue>8</defaultValue>
    <inlineHelpText>Ce champ permet de définir le délai de facturation, 8 par défaut</inlineHelpText>
    <label>Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>