DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Digicel_Country__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Country__c</fullName>
    <formula>(text(CreatedBy.Digicel_Country__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digicel Country</label>
    <type>Text</type>
</CustomField>