DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Disconnection_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Disconnection_Completed_On__c</fullName>
    <description>Used for requesting disconnection of service</description>
    <label>Disconnection Completed On</label>
    <type>Date</type>
</CustomField>