DigicielFull/force-app/main/default/objects/Service_Request__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Address District</description>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>