DigicielFull/force-app/main/default/objects/Service_Request__c/fields/DraftDuration__c.field-meta.xml
<CustomField>
    <fullName>DraftDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Time spend in the following Stage: Draft</description>
    <label>Draft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>