DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>Dwelling_Type__c</fullName>
    <label>Dwelling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>