DigicielFull/force-app/main/default/objects/Service_Request__c/fields/EngineerLevelTwo__c.field-meta.xml
<CustomField>
    <fullName>EngineerLevelTwo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer (level 2)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests8</relationshipName>
    <type>Lookup</type>
</CustomField>