DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>OS Done</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>To Order</fullName>
            </value>
            <value>
                <fullName>en attente DA</fullName>
            </value>
            <value>
                <fullName>en attente Acompte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>