DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Equipment_Order_Request__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Order_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this to trigger an alert for equipment to be ordered</inlineHelpText>
    <label>Equipment Order Request</label>
    <type>Checkbox</type>
</CustomField>