DigicielFull/force-app/main/default/objects/Service_Request__c/fields/EquipmentSubStatus__c.field-meta.xml
<CustomField>
    <fullName>EquipmentSubStatus__c</fullName>
    <label>Equipment sub-status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EquipmentStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Signée</fullName>
            </value>
            <value>
                <fullName>Acompte à faire</fullName>
            </value>
            <value>
                <fullName>Acompte encours</fullName>
            </value>
            <value>
                <fullName>En attente fournisseur</fullName>
            </value>
            <value>
                <fullName>Transitaire Paris</fullName>
            </value>
            <value>
                <fullName>Chez IDOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>