DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Est_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Scheduled_Date__c</fullName>
    <description>Used for estimating the planned scheduled date</description>
    <inlineHelpText>Used for estimating the planned scheduled date</inlineHelpText>
    <label>Est Scheduled Date</label>
    <type>Date</type>
</CustomField>