DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Expert__c.field-meta.xml
<CustomField>
    <fullName>Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests7</relationshipName>
    <type>Lookup</type>
</CustomField>