DigicielFull/force-app/main/default/objects/Service_Request__c/fields/FASAmount__c.field-meta.xml
<CustomField>
    <fullName>FASAmount__c</fullName>
    <label>FAS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>