DigicielFull/force-app/main/default/objects/Service_Request__c/fields/FAT_Label__c.field-meta.xml
<CustomField>
    <fullName>FAT_Label__c</fullName>
    <description>OSP INFORMATION</description>
    <label>FAT Label</label>
    <length>55</length>
    <type>Text</type>
</CustomField>