DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Generated__c.field-meta.xml
<CustomField>
    <fullName>Generated__c</fullName>
    <label>Generated</label>
    <type>Date</type>
</CustomField>