DigicielFull/force-app/main/default/objects/Service_Request__c/fields/GPSCoordinates__c.field-meta.xml
<CustomField>
    <fullName>GPSCoordinates__c</fullName>
    <label>GPS Coordinates</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>