DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ICT_BB_Project__c.field-meta.xml
<CustomField>
    <fullName>ICT_BB_Project__c</fullName>
    <formula>TEXT( Opportunity__r.ICT_BB_Project__c )</formula>
    <label>ICT BB Project</label>
    <type>Text</type>
</CustomField>