DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ICT_Support_Engineer__c.field-meta.xml
<CustomField>
    <fullName>ICT_Support_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the ICT Support Engineer responsible for this Service Request</inlineHelpText>
    <label>ICT Support Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>