DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ID_Liaison__c.field-meta.xml
<CustomField>
    <fullName>ID_Liaison__c</fullName>
    <label>ID Liaison</label>
    <length>18</length>
    <type>Text</type>
</CustomField>