DigicielFull/force-app/main/default/objects/Service_Request__c/fields/IdomNumber__c.field-meta.xml
<CustomField>
    <fullName>IdomNumber__c</fullName>
    <label>N° iDom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>