DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>OSP INFORMATION</description>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>