DigicielFull/force-app/main/default/objects/Service_Request__c/fields/InstallationActiveEquipment__c.field-meta.xml
<CustomField>
    <fullName>InstallationActiveEquipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipement actif</label>
    <type>Checkbox</type>
</CustomField>