DigicielFull/force-app/main/default/objects/Service_Request__c/fields/InstallationDateOfActiveEquipment__c.field-meta.xml
<CustomField>
    <fullName>InstallationDateOfActiveEquipment__c</fullName>
    <label>Installation équipement actif</label>
    <type>Date</type>
</CustomField>