DigicielFull/force-app/main/default/objects/Service_Request__c/fields/InstalledDuration__c.field-meta.xml
<CustomField>
    <fullName>InstalledDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Time spend in the following Stage: Installed</description>
    <label>Installed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>