DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Internet_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Internet_Bandwidth__c</fullName>
    <label>Internet Bandwidth</label>
    <length>180</length>
    <type>Text</type>
</CustomField>