DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Internet_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Internet_Service_Package__c</fullName>
    <label>Internet Service Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>