DigicielFull/force-app/main/default/objects/Service_Request__c/fields/LastStatusChange__c.field-meta.xml
<CustomField>
    <fullName>LastStatusChange__c</fullName>
    <description>Used to calculated how long stages last</description>
    <label>Last Status Change</label>
    <type>Date</type>
</CustomField>