DigicielFull/force-app/main/default/objects/Service_Request__c/fields/LastSubstatusChange__c.field-meta.xml
<CustomField>
    <fullName>LastSubstatusChange__c</fullName>
    <label>Last Substatus Change</label>
    <type>Date</type>
</CustomField>