DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Lenght_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Lenght_of_Delivery__c</fullName>
    <description>calculates the number of days between requested and completed</description>
    <formula>(Install_Completed_On__c -  Requested_Date__c ) - 
( FLOOR ( ( ( (Install_Completed_On__c) -  Requested_Date__c ) / 7 ) ) * 2 ) + 
CASE(MOD (  Requested_Date__c  - DATE( 1900,1,6 ),7), 
0,CASE( MOD ((Install_Completed_On__c) - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD ((Install_Completed_On__c) - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD( Requested_Date__c  - DATE( 1900,1,6 ),7) - MOD((Install_Completed_On__c) - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD((Install_Completed_On__c) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ))</formula>
    <label>Length of Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>