DigicielFull/force-app/main/default/objects/Service_Request__c/fields/LineItem__c.field-meta.xml
<CustomField>
    <fullName>LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>