DigicielFull/force-app/main/default/objects/Service_Request__c/fields/MACleanCity__c.field-meta.xml
<CustomField>
    <fullName>MACleanCity__c</fullName>
    <label>Clean City (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>