DigicielFull/force-app/main/default/objects/Service_Request__c/fields/MACleanCountry__c.field-meta.xml
<CustomField>
    <fullName>MACleanCountry__c</fullName>
    <label>Clean Country (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>