DigicielFull/force-app/main/default/objects/Service_Request__c/fields/MALongitude__c.field-meta.xml
<CustomField>
    <fullName>MALongitude__c</fullName>
    <label>Longitude (MapAnything)</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>