DigicielFull/force-app/main/default/objects/Service_Request__c/fields/MASimilarity__c.field-meta.xml
<CustomField>
    <fullName>MASimilarity__c</fullName>
    <label>Similarity (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>