DigicielFull/force-app/main/default/objects/Service_Request__c/fields/MAVerifiedLongitude__c.field-meta.xml
<CustomField>
    <fullName>MAVerifiedLongitude__c</fullName>
    <label>Verified Longitude (MapAnything)</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>