DigicielFull/force-app/main/default/objects/Service_Request__c/fields/MESFibreOptique__c.field-meta.xml
<CustomField>
    <fullName>MESFibreOptique__c</fullName>
    <inlineHelpText>Mise en service fibre optique</inlineHelpText>
    <label>Date de MES fibre optique</label>
    <type>Date</type>
</CustomField>