DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Nb_of_days_btw_creation_installation__c.field-meta.xml
<CustomField>
    <fullName>Nb_of_days_btw_creation_installation__c</fullName>
    <formula>Install_Completed_On__c -  DATEVALUE(CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb of days btw creation &amp; installation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>