DigicielFull/force-app/main/default/objects/Service_Request__c/fields/No_Of_Days_Returned_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_Returned_to_Sales__c</fullName>
    <formula>(Date_Returned_to_Service_Delivery__c -  Date_Returned_to_Sales__c  ) - 
( FLOOR ( ( ( ( Date_Returned_to_Service_Delivery__c ) -  Date_Returned_to_Sales__c ) / 7 ) ) * 2 ) + 
CASE(MOD (  Date_Returned_to_Sales__c - DATE( 1900,1,6 ),7), 
0,CASE( MOD (( Date_Returned_to_Service_Delivery__c ) - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD (( Date_Returned_to_Service_Delivery__c) - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD(  Date_Returned_to_Sales__c  - DATE( 1900,1,6 ),7) - MOD((  Date_Returned_to_Service_Delivery__c) - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD(( Date_Returned_to_Service_Delivery__c ) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ))</formula>
    <label>No Of Days Returned to Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>