DigicielFull/force-app/main/default/objects/Service_Request__c/fields/No_Of_Days_SR_On_Customer_Hold__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_SR_On_Customer_Hold__c</fullName>
    <description>Counts number of days on customer hold based on working days</description>
    <formula>(Date_SRStatus_Removed_from_Customer_Hold__c - Date_SR_Status_Updated_to_Customer_Hold__c ) - 
( FLOOR ( ( ( (Date_SRStatus_Removed_from_Customer_Hold__c) - Date_SR_Status_Updated_to_Customer_Hold__c ) / 7 ) ) * 2 ) + 
CASE(MOD ( Date_SR_Status_Updated_to_Customer_Hold__c - DATE( 1900,1,6 ),7), 
0,CASE( MOD ((Date_SRStatus_Removed_from_Customer_Hold__c) - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD ((Date_SRStatus_Removed_from_Customer_Hold__c) - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD( Date_SR_Status_Updated_to_Customer_Hold__c - DATE( 1900,1,6 ),7) - MOD((Date_SRStatus_Removed_from_Customer_Hold__c) - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD((Date_SRStatus_Removed_from_Customer_Hold__c) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ))</formula>
    <inlineHelpText>Counts number of days on customer hold based on working days</inlineHelpText>
    <label>No Of Days SR On Customer Hold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>