DigicielFull/force-app/main/default/objects/Service_Request__c/fields/OnHoldMoreInfoRqdDuration__c.field-meta.xml
<CustomField>
    <fullName>OnHoldMoreInfoRqdDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Time spend in the following Stage: On Hold More Info Rqd</description>
    <label>On Hold More Info Rqd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>