DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ONT_ID__c.field-meta.xml
<CustomField>
    <fullName>ONT_ID__c</fullName>
    <description>OSP INFORMATION</description>
    <label>ONT ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>