DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ONT_MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>ONT_MAC_Address__c</fullName>
    <description>OSP INFORMATION</description>
    <label>ONT MAC Address</label>
    <length>55</length>
    <type>Text</type>
</CustomField>