DigicielFull/force-app/main/default/objects/Service_Request__c/fields/ONT_Password__c.field-meta.xml
<CustomField>
    <fullName>ONT_Password__c</fullName>
    <description>OSP INFORMATION</description>
    <label>ONT Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>