DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Other_Services_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Services_1__c</fullName>
    <label>Other Services 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>