DigicielFull/force-app/main/default/objects/Service_Request__c/fields/Other_Services_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Services_2__c</fullName>
    <label>Other Services 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>