DigicielFull/force-app/main/default/objects/Service_Request__c/fields/PreSales_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>PreSales_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PreSales Check Completed</label>
    <type>Checkbox</type>
</CustomField>