DigicielFull/force-app/main/default/objects/Service_Request__c/fields/PreStation__c.field-meta.xml
<CustomField>
    <fullName>PreStation__c</fullName>
    <label>Prestation</label>
    <length>36</length>
    <type>Text</type>
</CustomField>